<androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="1dp"
        android:layout_marginBottom="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintCard"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/fixtureStatus"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:text="@string/finished" />

        <TextView
                android:id="@+id/fixtureTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:textSize="14sp"
                card_view:layout_constraintTop_toBottomOf="@id/fixtureStatus"
                android:text="@string/_19_00" />

        <TextView
                android:id="@+id/fixtureMD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                card_view:layout_constraintTop_toBottomOf="@id/fixtureTime"
                android:text="@string/md_35" />

        <TextView
                android:id="@+id/team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:textSize="16sp"
                card_view:layout_constraintLeft_toRightOf="@id/fixtureStatus"
                android:text="@string/stade_bretois" />

        <TextView
                android:id="@+id/team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="16sp"
                android:paddingBottom="5dp"
                card_view:layout_constraintBottom_toBottomOf="@id/fixtureMD"
                card_view:layout_constraintTop_toTopOf="@id/fixtureMD"
                card_view:layout_constraintTop_toBottomOf="@id/team1"
                card_view:layout_constraintLeft_toLeftOf="@id/team1"
                android:text="@string/clemrmont_foot_auvergene" />

        <TextView
                android:id="@+id/score1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                card_view:layout_constraintEnd_toEndOf="@id/constraintCard"
                android:text="@string/_1" />

        <TextView
                android:id="@+id/extra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                card_view:layout_constraintBottom_toBottomOf="@id/fixtureTime"
                card_view:layout_constraintTop_toTopOf="@id/fixtureTime"
                card_view:layout_constraintEnd_toEndOf="@id/constraintCard"
                card_view:layout_constraintTop_toBottomOf="@id/score1"
                android:text="@string/_00" />
        <TextView
                android:id="@+id/score2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                card_view:layout_constraintBottom_toBottomOf="@id/fixtureMD"
                card_view:layout_constraintTop_toTopOf="@id/fixtureMD"
                card_view:layout_constraintEnd_toEndOf="@id/constraintCard"
                card_view:layout_constraintTop_toBottomOf="@id/extra"
                android:text="@string/_0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>