<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="1dp"
        card_view:cardElevation="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintCard"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="50dp">

            <TextView
                    android:id="@+id/teamPlayerShirt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:text="@string/_1" />

            <TextView
                android:id="@+id/teamPlayerName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="15dp"
                card_view:layout_constraintLeft_toRightOf="@id/teamPlayerShirt"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/david_de_gea" />

            <TextView
                    android:id="@+id/teamPlayerRole"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/keeper"
                    android:gravity="center_vertical"
                    android:layout_marginRight="15dp"
                   card_view:layout_constraintEnd_toEndOf="@id/constraintCard"
                   />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>